--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,12 +59,19 @@ dependencies {
     // Maps utils (required for custom markers)
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
 
-
     implementation 'org.slf4j:slf4j-nop:1.7.25'
-	
-    // glide
+
+    // Retrofit and OkHttp
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
 
     // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
