--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -64,7 +65,8 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
 
     implementation 'org.slf4j:slf4j-nop:1.7.25'
-
+    implementation "com.android.support:support-emoji:28.0.0"
+    implementation "com.android.support:support-emoji-appcompat:28.0.0"
     // Retrofit and OkHttp
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
