--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     // Firestore Firestore
     implementation 'com.google.firebase:firebase-firestore:19.0.2'
+    // Firebase Storage
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
 
     // Google Play Services
 
@@ -57,16 +59,19 @@ dependencies {
 
     // Google play services for location information
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-	
-	// Google Maps Services (needed for directions)
+
+    // Google Maps Services (needed for directions)
     implementation 'com.google.maps:google-maps-services:0.2.9'
 
     // Maps utils (required for custom markers)
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
 
     implementation 'org.slf4j:slf4j-nop:1.7.25'
+
+    // Emojis
     implementation "com.android.support:support-emoji:28.0.0"
     implementation "com.android.support:support-emoji-appcompat:28.0.0"
+
     // Retrofit and OkHttp
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
