--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 
     implementation 'org.slf4j:slf4j-nop:1.7.25'
 
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // Emojis
     implementation "com.android.support:support-emoji:28.0.0"
     implementation "com.android.support:support-emoji-appcompat:28.0.0"
