--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,16 +25,22 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    implementation("com.mikepenz:materialdrawer:6.0.9@aar") {
+        transitive = true
+    }
+
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation "com.android.support:design:28.0.0"
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    //Android Support Design Library
-    implementation 'com.android.support:design:28.0.0'
-    //RecyclerView
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
     // Support multidex
     implementation 'com.android.support:multidex:1.0.3'
 
@@ -94,5 +100,13 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'android.arch.work:work-runtime:1.0.1'
+
+    // Material Drawer
+    implementation("com.mikepenz:materialdrawer:6.0.9@aar") {
+        transitive = true
+    }
+
+
+
 }
 apply plugin: 'com.google.gms.google-services'
