--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,13 +99,12 @@ dependencies {
     // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.turki-alkhateeb:materialcolorpicker:1.0.7'
     implementation 'android.arch.work:work-runtime:1.0.1'
-
     // Material Drawer
     implementation("com.mikepenz:materialdrawer:6.0.9@aar") {
         transitive = true
     }
-
 
 
 }
