--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,23 +17,17 @@
     <application
         android:name=".UserClient"
         android:allowBackup="false"
-        android:icon="@drawable/purpura1"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".ui.ThemeActivity"></activity>
+        <activity android:name=".ui.ProfileEditActivity"></activity>
+        <activity android:name=".ui.ThemeActivity" />
         <activity
-            android:name=".ui.ProfileDrawerActivity"
-            android:label="@string/title_activity_profile_drawer"
-            android:parentActivityName=".ui.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.purpura.googlemaps2018.ui.MainActivity" />
-        </activity>
-        <activity android:name=".ui.MainActivity" />
+            android:name=".ui.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
